2008-02-13  Johan Dahlin  <johan@gnome.org>

	* po/pl.po:
	Update polish translation (Jarek Zgoda)

=== 1.9.20 ===
2008-01-31 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* kiwi.spec:
	Release 1.9.20

2008-01-17  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/views.py (SignalBroker.on_widget_name__signal_name): 
	After was broken, all signals were connected using after instead of
	on by default. on -> connect, after -> connect_after now, really.
	Based on patch by Arek Korbik

2007-12-04  Johan Dahlin  <johan@gnome.org>

	* AUTHORS (Maintainers): Add Brad.

	* kiwi/ui/delegates.py (ProxySlaveDelegate): Add. Patch by
	Brad Crittenden

2007-11-22  Johan Dahlin  <johan@gnome.org>

	* examples/list/stockicon.py (Fruit.__init__):
	Add an example of this.

	* kiwi/ui/objectlist.py (Column): Add a new property
	column which references to another column to be able to
	pack two cell renderers into the same column

2007-11-20  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/objectlist.py: Only call column.set_expander_column
	once, and on the right instance. Found by George.

2007-11-13  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/db/stormintegration.py: 
	Add support for Storm in our DB API,

	* examples/search_storm.py: add an example

	Fixes for #3408

2007-11-13  Johan Dahlin  <johan@gnome.org>

	* po/it.po: Add italian translation, fixes #3582 
	(Sandro Bonazzola)

=== 1.9.19 ===
2007-11-06 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py
	* kiwi.spec
	Release 1.9.19

2007-11-04  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/entry.py: catch NameError instead of AttributeError,
	fixes gnome bug #479510 (Richard Hult)

2007-10-31  Mauricio Vieira  <mauricio.vieira@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
